# container_boilerplate

./: CMakeLists.txt  README.md
include/: my_container.hpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_main.cpp
